# aws-sre-doctor

./: README.md  pyproject.toml
checks/: alb.py  base.py  catalog.py  dependencies.py  ec2.py  ecs.py  efs.py  eks.py  iam.py  network.py  quotas.py  rds.py
cli/: main.py
config/environments/: dev.yaml  prod.yaml
core/: bundles.py  config.py  correlations.py  engine.py  github_issues.py  live_collectors.py  logging.py  models.py  snapshots.py
docs/: architecture.md  github-issues.md  live-collection.md  reproduction-guide.md  snapshot-generation.md
examples/: README.md  incident_snapshot.json  incident_snapshot_ec2.json  incident_snapshot_eks.json  incident_snapshot_healthy.json  incident_snapshot_iam.json  incident_snapshot_lb_target_group.json  incident_snapshot_multi_service.json  incident_snapshot_rds.json
reporters/: renderers.py
tests/: test_cli.py  test_engine.py  test_live_collectors.py
